@@ -3,20 +3,17 @@ package com.example.demo.ui.controller.Solution;
 import com.example.demo.domain.entities.Solution;
 import com.example.demo.domain.entities.User;
 import com.example.demo.domain.service.SolutionService;
-import com.example.demo.ui.dtos.solution.SolutionListResponse;
-import com.example.demo.ui.dtos.solution.SolutionRequest;
-import com.example.demo.ui.dtos.solution.SolutionResponse;
-import com.example.demo.ui.dtos.solution.SubmitResponse;
+import com.example.demo.domain.service.UserService;
+import com.example.demo.ui.dtos.solution.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-import org.hibernate.query.Page;
+import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Component;
-import org.springframework.web.bind.annotation.RequestBody;
 
 @Component
 public class SolutionSubController {
@@ -37,27 +34,16 @@ public class SolutionSubController {
         return ResponseEntity.status(HttpStatus.OK).body(response);
     }
     
-    public ResponseEntity<SolutionListResponse> getByUser(SolutionRequest request) {
-        if (request.credentialsEncrypted() == null || request.credentialsEncrypted().isEmpty()) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
-        }
-        return credentialsValidator.check(request.credentialsEncrypted())
-                .map(user -> {
-                    List<Solution> listSolution = solutionService.getByUser(user.getId());
-                    SolutionListResponse responseBody = new SolutionListResponse(
-                        listSolution.stream()
-                            .map(solution -> new SolutionResponse(
-                                solution.getId(),
-                                solution.getLevel().getId(),
-                                solution.getUser().getId(),
-                                solution.getCode(),
-                                solution.isPassed()
-                            ))
-                            .toList()
-                    );
-                    return ResponseEntity.ok(responseBody);
-                })
-                .orElseGet(() -> ResponseEntity.status(HttpStatus.UNAUTHORIZED).build());
+    public ResponseEntity<SolutionListResponse> getByUser(Authentication authentication) {
+
+        List<Solution> solutions = solutionService.getByUser(authentication.getName());
+        SolutionListResponse response = new SolutionListResponse(solutions.stream().map(s->{
+            return new SolutionResponse(s.getId(),s.getLevel().getId(),s.getUser().getId(),s.getCode(),s.isPassed());
+        }).collect(Collectors.toList()));
+
+        return ResponseEntity.status(HttpStatus.OK).body(response);
     }
+
+
 
 }
